--- a/requirements.txt
+++ b/requirements.txt
@@ -1,11 +1,12 @@
-Flask
-flask-login
-flask-wtf
-Werkzeug
-Flask-Limiter==3.11.0
-gunicorn==22.0.0
-psycopg[binary]==3.2.13
+Flask==3.0.3
+Werkzeug==3.0.3
+flask-login==0.6.3
+flask-wtf==1.2.1
 
-python-dotenv>=1.0.0
+Flask-Limiter==3.11.0
 limits[redis]==3.14.1
 redis==5.0.8
+
+gunicorn==22.0.0
+psycopg[binary]==3.2.13
+python-dotenv>=1.0.0
