--- a/requirements.txt
+++ b/requirements.txt
@@ -1,5 +1,4 @@
 Flask==3.0.3
-Werkzeug==3.1.5
 flask-login==0.6.3
 flask-wtf==1.2.1
 
@@ -10,3 +9,7 @@ redis==5.0.8
 gunicorn==22.0.0
 psycopg[binary]==3.2.13
 python-dotenv>=1.0.0
+
+filelock==3.20.3
+urllib3==2.6.3
+Werkzeug==3.1.5
